// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle Custom size togglers 1`] = `
Array [
  <div
    className="sc-iAvgwm jnXqLu rts-toggle__container undefined"
    data-element="toggle"
    height={12.5}
    width={25}
  >
    <input
      className="sc-cTQhss fqsKeu rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-efBctP cizkut rts-toggle__background"
      data-element="toggle-background"
      height={12.5}
    />
  </div>,
  <div
    className="sc-iAvgwm kWSyMz rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-cTQhss hPRWpT rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-efBctP gnXphq rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>,
  <div
    className="sc-iAvgwm bhCHDx rts-toggle__container undefined"
    data-element="toggle"
    height={37.5}
    width={75}
  >
    <input
      className="sc-cTQhss hNRxeb rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-efBctP iJPOip rts-toggle__background"
      data-element="toggle-background"
      height={37.5}
    />
  </div>,
  <div
    className="sc-iAvgwm emqSUS rts-toggle__container undefined"
    data-element="toggle"
    height={50}
    width={100}
  >
    <input
      className="sc-cTQhss ceXTXo rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-efBctP jfnEnj rts-toggle__background"
      data-element="toggle-background"
      height={50}
    />
  </div>,
]
`;

exports[`Storyshots Components/Toggle Toggle checked 1`] = `
<div
  className="sc-iAvgwm kWSyMz rts-toggle__container undefined"
  data-element="toggle"
  height={25}
  width={50}
>
  <input
    checked={true}
    className="sc-cTQhss hPRWpT rts-toggle__toggle"
    data-element="toggle-input"
    type="checkbox"
  />
  <span
    className="sc-efBctP gnXphq rts-toggle__background"
    data-element="toggle-background"
    height={25}
  />
</div>
`;

exports[`Storyshots Components/Toggle Toggle unchecked 1`] = `
<div
  className="sc-iAvgwm kWSyMz rts-toggle__container undefined"
  data-element="toggle"
  height={25}
  width={50}
>
  <input
    className="sc-cTQhss hPRWpT rts-toggle__toggle"
    data-element="toggle-input"
    type="checkbox"
  />
  <span
    className="sc-efBctP gnXphq rts-toggle__background"
    data-element="toggle-background"
    height={25}
  />
</div>
`;
